<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_theme"
        android:title="@string/theme"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/theme_light"
                android:title="@string/light_theme" />
            <item
                android:id="@+id/theme_dark"
                android:title="@string/dark_theme" />
             <item
                android:id="@+id/theme_custom"
                android:title="@string/custom_theme" />
        </menu>
    </item>
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
